fix: fix style on mobile

--- a/styles/projects.css
+++ b/styles/projects.css
@@ -58,4 +58,5 @@
 
 .projects>ul>li>p {
     padding: 0.5rem 1rem;
+    font-size: 1rem;
 }
